--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.Tofpu</groupId>
-    <artifactId>ExtraLobby</artifactId>
+    <groupId>me.tofpu</groupId>
+    <artifactId>sparelobby</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ExtraLobby</name>
+    <name>SpareLobby</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -42,7 +42,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>org.bstats</pattern>
-                                    <shadedPattern>me.tofpu.extralobby.utils.bstats</shadedPattern>
+                                    <shadedPattern>me.tofpu.sparelobby.utils.bstats</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -75,6 +75,10 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <repository>
+            <id>inventive-repo</id>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -95,6 +99,11 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.10.9</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.inventivetalent.spiget-update</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.4.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
