--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.tofpu</groupId>
     <artifactId>sparelobby</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>SpareLobby</name>
@@ -44,6 +44,10 @@
                                     <pattern>org.bstats</pattern>
                                     <shadedPattern>me.tofpu.sparelobby.utils.bstats</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>org.inventivetalent.spiget-update</pattern>
+                                    <shadedPattern>me.tofpu.sparelobby.utils.updater</shadedPattern>
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
@@ -75,10 +79,6 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
-        <repository>
-            <id>inventive-repo</id>
-            <url>https://repo.inventivetalent.org/content/groups/public/</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -101,9 +101,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.inventivetalent.spiget-update</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.4.2-SNAPSHOT</version>
+            <groupId>me.tofpu</groupId>
+            <artifactId>spigotupdater</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
