--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,7 +9,7 @@ settings:
     disable: false
 
     # A message that everyone in the server receives!
-    message: "&8[&a&l+&8] &6%player% &ehas joined the server!"
+    message: "&8[&a&l+&8] &6%player_name% &ehas joined the server!"
 
   # Spawns fireworks upon a player joining!
   welcome-fireworks:
